Refine Inception Labs details

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -2,7 +2,7 @@
 
 Apoorv Umang Saxena:
   name        : "Apoorv Umang Saxena"
-  bio         : "Member of Technical Staff at Inception Labs (remote from Bangalore)"
+  bio         : "Member of Technical Staff at Inception Labs"
   avatar      : "/assets/images/apoorv.jpg"
   links:
     - label: "Bangalore, India"
